--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-<meta http-equiv="refresh" content="0; url=https://prabhsembhi.github.io/portfolio/dist/index.html">
+<meta http-equiv="refresh" content="0; url=https://prabhsembhi.github.io/Portfolio/dist/index.html">
 </head>
 <body></body>
 </html>
