--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html>
 
 <head>
-<meta http-equiv="refresh" content="0; url=https://github.com/prabhsembhi/Portfolio/blob/master/dist/index.html">
+
 </head>
-<body></body>
+<body>
+  hrllo
+  </body>
 </html>
